// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders chip with close button 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(232, 222, 248, 1)",
      "borderRadius": 8,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    }
  }
  testID="chip-container-outer-layer"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(232, 222, 248, 1)",
        "borderColor": "rgba(121, 116, 126, 1)",
        "borderRadius": 8,
        "borderStyle": "solid",
        "borderWidth": 0,
        "flex": undefined,
        "flexDirection": "column",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="chip-container"
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "borderRadius": 8,
            },
            {
              "width": "100%",
            },
          ],
        ]
      }
      testID="chip"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingLeft": 4,
              "position": "relative",
            },
            {
              "paddingLeft": 0,
            },
            {
              "paddingRight": 34,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignSelf": "center",
                "padding": 4,
              },
              {
                "paddingLeft": 8,
                "paddingRight": 0,
              },
              null,
            ]
          }
        >
          <Text
            accessibilityElementsHidden={true}
            allowFontScaling={false}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(103, 80, 164, 1)",
                  "fontSize": 18,
                },
                [
                  {
                    "lineHeight": 18,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
                {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            󰋼
          </Text>
        </View>
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(28, 27, 31, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "marginVertical": 6,
                    "textAlignVertical": "center",
                  },
                  {
                    "color": "rgba(29, 25, 43, 1)",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                  {
                    "marginLeft": 8,
                    "marginRight": 0,
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Example Chip
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <View
        accessibilityLabel="Close"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            [
              {
                "alignSelf": "center",
                "padding": 4,
              },
              {
                "marginRight": 4,
              },
              {
                "marginRight": 8,
                "padding": 0,
              },
            ]
          }
        >
          <Text
            accessibilityElementsHidden={true}
            allowFontScaling={false}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(29, 25, 43, 1)",
                  "fontSize": 18,
                },
                [
                  {
                    "lineHeight": 18,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
                {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            󰅖
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders chip with custom close button 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(232, 222, 248, 1)",
      "borderRadius": 8,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    }
  }
  testID="chip-container-outer-layer"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(232, 222, 248, 1)",
        "borderColor": "rgba(121, 116, 126, 1)",
        "borderRadius": 8,
        "borderStyle": "solid",
        "borderWidth": 0,
        "flex": undefined,
        "flexDirection": "column",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="chip-container"
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "borderRadius": 8,
            },
            {
              "width": "100%",
            },
          ],
        ]
      }
      testID="chip"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingLeft": 4,
              "position": "relative",
            },
            {
              "paddingLeft": 0,
            },
            {
              "paddingRight": 34,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignSelf": "center",
                "padding": 4,
              },
              {
                "paddingLeft": 8,
                "paddingRight": 0,
              },
              null,
            ]
          }
        >
          <Text
            accessibilityElementsHidden={true}
            allowFontScaling={false}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(103, 80, 164, 1)",
                  "fontSize": 18,
                },
                [
                  {
                    "lineHeight": 18,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
                {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            󰋼
          </Text>
        </View>
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(28, 27, 31, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "marginVertical": 6,
                    "textAlignVertical": "center",
                  },
                  {
                    "color": "rgba(29, 25, 43, 1)",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                  {
                    "marginLeft": 8,
                    "marginRight": 0,
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Example Chip
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <View
        accessibilityLabel="Close"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            [
              {
                "alignSelf": "center",
                "padding": 4,
              },
              {
                "marginRight": 4,
              },
              {
                "marginRight": 8,
                "padding": 0,
              },
            ]
          }
        >
          <Text
            accessibilityElementsHidden={true}
            allowFontScaling={false}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(29, 25, 43, 1)",
                  "fontSize": 18,
                },
                [
                  {
                    "lineHeight": 18,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
                {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            󰁅
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders chip with icon 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(232, 222, 248, 1)",
      "borderRadius": 8,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    }
  }
  testID="chip-container-outer-layer"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(232, 222, 248, 1)",
        "borderColor": "rgba(121, 116, 126, 1)",
        "borderRadius": 8,
        "borderStyle": "solid",
        "borderWidth": 0,
        "flex": undefined,
        "flexDirection": "column",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="chip-container"
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "borderRadius": 8,
            },
            {
              "width": "100%",
            },
          ],
        ]
      }
      testID="chip"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingLeft": 4,
              "position": "relative",
            },
            {
              "paddingLeft": 0,
            },
            {
              "paddingRight": 0,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignSelf": "center",
                "padding": 4,
              },
              {
                "paddingLeft": 8,
                "paddingRight": 0,
              },
              null,
            ]
          }
        >
          <Text
            accessibilityElementsHidden={true}
            allowFontScaling={false}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(103, 80, 164, 1)",
                  "fontSize": 18,
                },
                [
                  {
                    "lineHeight": 18,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
                {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            󰋼
          </Text>
        </View>
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(28, 27, 31, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "marginVertical": 6,
                    "textAlignVertical": "center",
                  },
                  {
                    "color": "rgba(29, 25, 43, 1)",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                  {
                    "marginLeft": 8,
                    "marginRight": 16,
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Example Chip
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders chip with onPress 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgba(232, 222, 248, 1)",
      "borderRadius": 8,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    }
  }
  testID="chip-container-outer-layer"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgba(232, 222, 248, 1)",
        "borderColor": "rgba(121, 116, 126, 1)",
        "borderRadius": 8,
        "borderStyle": "solid",
        "borderWidth": 0,
        "flex": undefined,
        "flexDirection": "column",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="chip-container"
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "borderRadius": 8,
            },
            {
              "width": "100%",
            },
          ],
        ]
      }
      testID="chip"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingLeft": 4,
              "position": "relative",
            },
            {
              "paddingLeft": 0,
            },
            {
              "paddingRight": 0,
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(28, 27, 31, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "marginVertical": 6,
                    "textAlignVertical": "center",
                  },
                  {
                    "color": "rgba(29, 25, 43, 1)",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                  {
                    "marginLeft": 16,
                    "marginRight": 16,
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Example Chip
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders outlined disabled chip 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "transparent",
      "borderRadius": 8,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    }
  }
  testID="chip-container-outer-layer"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "transparent",
        "borderColor": "rgba(73, 69, 79, 0.12)",
        "borderRadius": 8,
        "borderStyle": "solid",
        "borderWidth": 1,
        "flex": undefined,
        "flexDirection": "column",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="chip-container"
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "borderRadius": 8,
            },
            {
              "width": "100%",
            },
          ],
        ]
      }
      testID="chip"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingLeft": 4,
              "position": "relative",
            },
            {
              "paddingLeft": 0,
            },
            {
              "paddingRight": 0,
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(28, 27, 31, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "marginVertical": 6,
                    "textAlignVertical": "center",
                  },
                  {
                    "color": "rgba(28, 27, 31, 0.38)",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                  {
                    "marginLeft": 16,
                    "marginRight": 16,
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Example Chip
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders selected chip 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "rgb(232, 222, 248)",
      "borderRadius": 8,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    }
  }
  testID="chip-container-outer-layer"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "rgb(232, 222, 248)",
        "borderColor": "rgba(121, 116, 126, 1)",
        "borderRadius": 8,
        "borderStyle": "solid",
        "borderWidth": 0,
        "flex": undefined,
        "flexDirection": "column",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0,
        "shadowRadius": 0,
      }
    }
    testID="chip-container"
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "overflow": "hidden",
          },
          [
            {
              "borderRadius": 8,
            },
            {
              "width": "100%",
            },
          ],
        ]
      }
      testID="chip"
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "paddingLeft": 4,
              "position": "relative",
            },
            {
              "paddingLeft": 0,
            },
            {
              "paddingRight": 0,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignSelf": "center",
                "padding": 4,
              },
              {
                "paddingLeft": 8,
                "paddingRight": 0,
              },
              null,
            ]
          }
        >
          <Text
            accessibilityElementsHidden={true}
            allowFontScaling={false}
            importantForAccessibility="no-hide-descendants"
            pointerEvents="none"
            selectable={false}
            style={
              [
                {
                  "color": "rgba(29, 25, 43, 1)",
                  "fontSize": 18,
                },
                [
                  {
                    "lineHeight": 18,
                    "transform": [
                      {
                        "scaleX": 1,
                      },
                    ],
                  },
                  {
                    "backgroundColor": "transparent",
                  },
                ],
                {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            󰄬
          </Text>
        </View>
        <Text
          numberOfLines={1}
          selectable={false}
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(28, 27, 31, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 0.1,
                  "lineHeight": 20,
                },
                [
                  {
                    "marginVertical": 6,
                    "textAlignVertical": "center",
                  },
                  {
                    "color": "rgba(29, 25, 43, 1)",
                    "fontFamily": "System",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 0.1,
                    "lineHeight": 20,
                  },
                  {
                    "marginLeft": 8,
                    "marginRight": 16,
                  },
                  undefined,
                ],
              ],
            ]
          }
        >
          Example Chip
        </Text>
      </View>
    </View>
  </View>
</View>
`;
